detalles de evolucion y signos vtales

--- a/WebContent/printHospitalization.html
+++ b/WebContent/printHospitalization.html
@@ -141,7 +141,7 @@
 				<tr>
 					<th>Fecha</th>
 					<th>Médico</th>
-					<th>Evaluación</th>
+					<th>Evolución</th>
 					<th>Indicaciones</th>
 				</tr>				
 				<tr>
