agregando crear presupuesto y admitir paciente

--- a/WebContent/estimations.html
+++ b/WebContent/estimations.html
@@ -62,7 +62,7 @@
         <div id="menu">
 			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 	    	<ul>
-            	<li class="menuitem"><a href="#">Crear Presupuesto</a></li>
+            	<li class="menuitem"><a href="createEstimationForm.html">Crear Presupuesto</a></li>
             </ul>
 			<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         </div>        
