--- a/WebContent/admission.html
+++ b/WebContent/admission.html
@@ -62,7 +62,7 @@
         <div id="menu">
 			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 	    	<ul>
-            	<li class="menuitem"><a href="#">Admitir Paciente</a></li>
+            	<li class="menuitem"><a href="admitPatientForm.html">Admitir Paciente</a></li>
             </ul>
 			<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         </div>        
