--- a/WebContent/editEvolutionDetail.html
+++ b/WebContent/editEvolutionDetail.html
@@ -17,6 +17,7 @@
 			border-width: 1px;
 			border-color: #666666;
 			border-collapse: collapse;
+			width: 100%;
 		}
 		table.gridtable th {
 			border-width: 1px;
@@ -40,6 +41,7 @@
 
 
 <div id="contentAux">
+	<br>
 	<table class="gridtable">
 	  <thead>
 	    <tr>
@@ -49,18 +51,22 @@
 	  </thead>
 	  <tbody>
 	    <tr>
-	      <td>Blandit incorrupte quaerendum in quo, nibh impedit id vis, vel no nullam semper audiam.
-	       Ei populo graeci consulatu mei, has ea stet modus phaedrum. Inani oblique ne has, duo et
-	        veritus detraxit. Tota ludus oratio ea mel, offendit persequeris ei vim. Eos dicat oratio
-	         partem ut, id cum ignota senserit intellegat. Sit inani ubique graecis ad, quando graecis 
-	         liberavisse et cum, dicit option eruditi at duo. Homero salutatus suscipiantur eum id,
-	          tamquam voluptaria expetendis ad sed, nobis feugiat similique usu ex.</td>
-		 <td>Blandit incorrupte quaerendum in quo, nibh impedit id vis, vel no nullam semper audiam.
-	       Ei populo graeci consulatu mei, has ea stet modus phaedrum. Inani oblique ne has, duo et
-	        veritus detraxit. Tota ludus oratio ea mel, offendit persequeris ei vim. Eos dicat oratio
-	         partem ut, id cum ignota senserit intellegat. Sit inani ubique graecis ad, quando graecis 
-	         liberavisse et cum, dicit option eruditi at duo. Homero salutatus suscipiantur eum id,
-	          tamquam voluptaria expetendis ad sed, nobis feugiat similique usu ex.</td>
+	      <td>
+	      	<textarea rows="5" cols="50" style="width: 100%;">Blandit incorrupte quaerendum in quo, nibh impedit id vis, vel no nullam semper audiam.
+Ei populo graeci consulatu mei, has ea stet modus phaedrum. Inani oblique ne has, duo et
+veritus detraxit. Tota ludus oratio ea mel, offendit persequeris ei vim. Eos dicat oratio
+partem ut, id cum ignota senserit intellegat. Sit inani ubique graecis ad, quando graecis 
+liberavisse et cum, dicit option eruditi at duo. Homero salutatus suscipiantur eum id,
+tamquam voluptaria expetendis ad sed, nobis feugiat similique usu ex.</textarea>
+	        </td>
+		 <td>
+		 	<textarea rows="5" cols="50" style="width: 100%;">Blandit incorrupte quaerendum in quo, nibh impedit id vis, vel no nullam semper audiam.
+Ei populo graeci consulatu mei, has ea stet modus phaedrum. Inani oblique ne has, duo et
+veritus detraxit. Tota ludus oratio ea mel, offendit persequeris ei vim. Eos dicat oratio
+partem ut, id cum ignota senserit intellegat. Sit inani ubique graecis ad, quando graecis 
+liberavisse et cum, dicit option eruditi at duo. Homero salutatus suscipiantur eum id,
+tamquam voluptaria expetendis ad sed, nobis feugiat similique usu ex.</textarea>
+	     </td>
 	
 	    </tr>
 	  </tbody>
