maqueta html suministros

--- a/WebContent/createEstimation.html
+++ b/WebContent/createEstimation.html
@@ -56,7 +56,7 @@
 					    <li><a href="emergencies.html">Emergencia</a></li>
 						<li><a href="admission.html">Admisión</a></li>
 					    <li><a href="hospitalization.html">Hospitalización</a></li>
-						<li><a href="supplies.html">Suministros</a></li>
+						<li><a href="supplyAreas.html">Suministros</a></li>
 						<li><a href="bank.html">Cajas y Bancos</a></li>
 						<li><a href="accounts.html">Cuentas</a></li>
 						<li><a href="laboratory.html">Laboratorio</a></li> 
@@ -197,7 +197,7 @@
 				<div id="botonera">
 				<form action="estimations.html">
 				<div id="botonP">
-							<input type="submit"  class="button"  name="sbmtButton" value="Modificar" style="margin-left:30%; margin-top: 5px;"/>
+							<input type="submit"  class="button"  name="sbmtButton" value="Agregar" style="margin-left:30%; margin-top: 5px;"/>
 				</div>	
 				</form>
 				<form>
