--- a/WebContent/createEstimationForm.html
+++ b/WebContent/createEstimationForm.html
@@ -62,7 +62,7 @@
 					    <li><a href="emergencies.html">Emergencia</a></li>
 						<li><a href="admission.html">Admisión</a></li>
 					    <li><a href="hospitalization.html">Hospitalización</a></li>
-						<li><a href="supplies.html">Suministros</a></li>
+						<li><a href="supplyAreas.html">Suministros</a></li>
 						<li><a  href="bank.html">Cajas y Bancos</a></li>
 						<li><a href="accounts.html">Cuentas</a></li>
 						<li><a href="laboratory.html">Laboratorio</a></li> 
