--- a/WebContent/estimations.html
+++ b/WebContent/estimations.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html >
 <html>
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
 	<title>Presupuestos</title>
-	<script type="text/javascript" language="javascript" src="./js/jquery.js"></script>
-	<script type="text/javascript" language="javascript" src="./js/jquery.dataTables.js"></script>
-	<script type="text/javascript" language="javascript" src="./js/jquery.leanModal.min.js"></script>
+	<script type="text/javascript" src="./js/jquery.js"></script>
+	<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
+	<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
 	<script type="text/javascript" charset="utf-8">
 	$(document).ready(function() {
 		$('#example').dataTable( {
@@ -87,7 +87,7 @@
 			<div id="dt_example">
 					<div id="container">
 						<div id="demo">
-							<table cellpadding="0" cellspacing="0" border="0" class="display" id="example">
+							<table class="display" id="example">
 								<thead>
 									<tr>
 										<th>ID</th>
