--- a/WebContent/pendingAccounts.html
+++ b/WebContent/pendingAccounts.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -7,9 +7,8 @@
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
 	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-		
-	<script type="text/javascript" language="javascript" src="./js/jquery.dataTables.js"></script>
-		<script type="text/javascript" language="javascript" src="./js/jquery.leanModal.min.js"></script>
+		<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
+		<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
 		<link rel="stylesheet" href="/resources/demos/style.css" />
 		<script>
 			$(function() {
@@ -126,7 +125,7 @@
 			  		</ul>
   					<div id="tabs-1">
   						
-  						<table cellpadding="0" cellspacing="0" border="0" class="display" id="example2">
+  						<table class="display" id="example2">
 								<thead>
 									<tr>
 										<th>No. de Factura</th>
@@ -181,7 +180,7 @@
   					</div>
   					<div id="tabs-2">
   						
-  						<table cellpadding="0" cellspacing="0" border="0" class="display" id="example">
+  						<table  class="display" id="example">
 								<thead>
 									<tr>
 										<th>No. de Factura</th>
