--- a/WebContent/admitPatient.html
+++ b/WebContent/admitPatient.html
@@ -38,14 +38,27 @@
 		}
 		</script>
 		<script type="text/javascript">
-		window.onload = function()
-		{
-			var val = window.location.toString().substr(window.location.toString().indexOf('=') + 1);
-			if (val == 1){
-				var elem = document.getElementById("estimationId");
-				elem.value = "1234567";
+		$(document).ready(function() {
+			
+			function getUrlVars() {
+			    var vars = {};
+			    var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
+			        vars[key] = value;
+			    });
+			    return vars;
 			}
-		}
+
+			var first = getUrlVars()["insurance"];
+			var estimationId = getUrlVars()["id"];
+			if (estimationId != null)
+				$("#estimationId").val("154600");
+			
+			first = first.replace(/\+/g, ' ');
+			if (first != null)
+				$("#insuranceName").val(first);
+			
+			
+		});
 		</script>
 		
 	</head>
@@ -85,10 +98,9 @@
 						 	<fieldset>
 							   <b>Cédula:</b> <span style="margin-left: 130px;">V-12345678</span><br/><br/>
 							   <b>Nombre: </b><span style="margin-left: 125px;">Ana Rojas</span><br><br/>
-							   <label> Responsable del Pago:</label>    
-							   	<input type="text" name="insuranceName" id="insuranceName" value="">
-							    <a id="go" rel="leanModal" href="#payment-resp" style="color: #f7941e; font-weight: bold; ">
-									<input type="button"id="paymentResp" value="Escoger" style="width: auto !important;" >
+							   <label> Responsable del Pago:</label>  <input type="text" name="insuranceName" id="insuranceName" value="" readonly>
+							    <a href="searchInsurance.html?function=admitPatient" style="color: #f7941e; font-weight: bold;">
+									<input type="button"id="paymentResp" value="Cambiar" >
 								</a> 
 								<br><br>
 					
