--- a/WebContent/hospitalization.html
+++ b/WebContent/hospitalization.html
@@ -71,10 +71,13 @@
 				    <li><a href="emergencies.html">Emergencia</a></li>
 					<li><a href="admission.html">Admisión</a></li>
 				    <li><a class="active" href="hospitalization.html">Hospitalización</a></li>
+					<li><a href="protocols.html">Protocolos</a></li>
+					<li><a href="services.html">Servicios</a></li>
 					<li><a href="supplyAreas.html">Suministros</a></li>
+					<li><a href="departments.html">Departamentos</a></li>
+					<li><a href="doctors.html">Doctores</a></li>
 					<li><a  href="bank.html">Cajas y Bancos</a></li>
 					<li><a href="accounts.html">Cuentas</a></li>
-					<li><a href="laboratory.html">Laboratorio</a></li> 
 				</ul>
 			</div>
             <div id="leftmenu_bottom"></div>
