--- a/WebContent/searchInsurance.html
+++ b/WebContent/searchInsurance.html
@@ -109,10 +109,13 @@
 				    <li><a id="emergencies" href="emergencies.html">Emergencia</a></li>
 					<li><a id="admission" href="admission.html">Admisión</a></li>
 				    <li><a id="hospitalization" href="hospitalization.html">Hospitalización</a></li>
+					<li><a href="protocols.html">Protocolos</a></li>
+					<li><a href="services.html">Servicios</a></li>
 					<li><a id="supplyAreas" href="supplyAreas.html">Suministros</a></li>
+					<li><a href="departments.html">Departamentos</a></li>
+					<li><a href="doctors.html">Doctores</a></li>
 					<li><a id="bank" href="bank.html">Cajas y Bancos</a></li>
 					<li><a id="accounts" href="accounts.html">Cuentas</a></li>
-					<li><a id="laboratory" href="laboratory.html">Laboratorio</a></li> 
 				</ul>
 			</div>
             <div id="leftmenu_bottom"></div>
